airflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
spec:
  rules:
  - host: airflow.deplatform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airflow-webserver
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  ports:
    - port: 80 # the service port
      targetPort: 8080   # The deployment port
      name: http
      protocol: TCP
  type: NodePort
  selector:
    component: api-server  # Update to match the correct label
    release: airflow
    tier: airflow
